--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,21 +11,17 @@
         app:layoutDescription="@xml/main_activity"
         tools:context=".MainActivity">
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@string/title_text"
-            android:textAlignment="center"
-            android:textAllCaps="false"
-            android:textColor="#545454"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/download_constraint"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="32dp"
+            android:src="@drawable/dload"
+            app:layout_constraintBottom_toTopOf="@id/radioGroup"
+            app:layout_constraintTop_toBottomOf="parent" />
 
         <RadioGroup
             android:id="@+id/radioGroup"
@@ -37,7 +33,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title">
+            app:layout_constraintTop_toBottomOf="@+id/download_constraint">
 
             <RadioButton
                 android:id="@+id/glide"
@@ -76,17 +72,17 @@
             android:layout_width="0dp"
             android:layout_height="64dp"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="128dp"
+            android:layout_marginBottom="32dp"
             android:layout_marginEnd="32dp"
             app:buttonColor="@color/colorPrimary"
             app:circleColor="@color/transparent"
-            app:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/radioGroup"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.0"
+            app:textColor="@color/white" />
 
     </androidx.constraintlayout.motion.widget.MotionLayout>
 </layout>
