--- a/app/src/main/res/xml/main_activity.xml
+++ b/app/src/main/res/xml/main_activity.xml
@@ -8,8 +8,6 @@
         motion:constraintSetStart="@id/start"
         motion:duration="1200"
         motion:autoTransition="animateToEnd">
-        <KeyFrameSet>
-        </KeyFrameSet>
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
@@ -21,7 +19,22 @@
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
             android:alpha="0.0"
-            android:rotationX="-80"/>
+            android:rotationX="-80"
+            motion:layout_editor_absoluteY="81dp"
+            motion:layout_editor_absoluteX="0dp" />
+        <Constraint
+            android:layout_marginEnd="32dp"
+            android:layout_height="64dp"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintHorizontal_bias="0.0"
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="0dp"
+            motion:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="32dp"
+            android:id="@+id/download"
+            android:layout_marginTop="128dp"
+            motion:layout_constraintTop_toBottomOf="@+id/radioGroup"
+            motion:layout_constraintVertical_bias="1.0" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
